# ServerTemplate.py

./: .editorconfig  .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  start.sh
.github/workflows/: codeql-analysis.yml
resources/: config.template.yml  config.yml  docs.py  swagger.template.html  swagger_template.yml
resources/handler/: example_static.json  status.json
src/: endpoint.py  gendoc.py  route.py  run.py
src/command/: command.py  executor.py
src/command/commands/: gendoc.py  general.py  load.py  reload.py
src/logging/: __init__.py  formatting.py  handlers.py  levels.py  logger.py  record.py
src/logging/formatter/: lexing.py
src/server/: ep.py  handler.py  handler_base.py  server.py
src/server/handler_root/: _.py  error-example.py  example.py  show_text.py
src/server/handler_root/example/: __.py
src/server/handler_root/example/__/: __.py
src/server/handler_root/example2/: ___.py
src/utils/: colors.py  flags.py  guesser.py  header_parse.py  logging.py  position.py  result.py  sqlmodifier.py  stacktrace.py  token.py
